@@ -6864,7 +6864,7 @@ A:0/12
 
 N:909:Learning
 G:!:d
-I:71:8:0
+I:72:20:0
 W:101:0:4:25000
 A:101/3
 P:0:1d1:0:0:0
